compiler/testData/diagnostics/tests/callableReference/bound/innerNested.fir.kt
class Outer {
    class Nested
    inner class Inner
}

fun test() {
    Outer()::Inner
    <!UNRESOLVED_REFERENCE!>Outer()::Nested<!>
}
